# py-sitemap-generator

./: .gitignore  README.md  pyproject.toml
src/: main.py
